Fix: screen width overflow, fixed footer design.

--- a/style.css
+++ b/style.css
@@ -3,14 +3,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-  scroll-behavior: smooth !important;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   list-style: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  overflow-x: hidden;
   background-color: var(--primary-bg);
-  margin: 0;
-  padding: 0;
   transition: all .2s ease;
 }
 
@@ -600,8 +605,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2rem 0;
-  width: 100%;
+  padding: 2rem 1rem;
 }
 
 .components-outer-container {
@@ -645,7 +649,7 @@ nav {
   font-weight: 500;
   line-height: 40px;
   margin-top: 2rem;
-  padding: 2rem;
+  padding: 8px;
   width: 30%;
 }
 
@@ -660,7 +664,7 @@ nav {
   flex-direction: column;
   gap: 2rem;
   margin-top: 2rem;
-  padding: 2rem;
+  padding: 8px;
   width: 30%;
 }
 
